--- a/app/views/moderation/news/show.html.haml
+++ b/app/views/moderation/news/show.html.haml
@@ -1,10 +1,11 @@
 - title @news.title
 
-- content_for :toolpanel do
-  = render 'toolpanel', news: @news, boards: @boards, enable_reassign: true
 
 - content_for :metadata do
-  = render 'vote'
+  = render 'metadata', news: @news
+
+- content_for :toolpanel do
+  = render 'toolpanel', news: @news, boards: @boards, enable_reassign: true
 
 = render 'topbar', news: @news, show_backlink: true
 
@@ -21,8 +22,6 @@
         = render partial: 'redaction/links/link', collection: @news.links
       %p.new_link{'data-url' => new_redaction_news_link_path(news_id: @news)}
         %button.add_link Ajouter un lien
-      #second_part_toc
-        = @news.second_part_toc
       #second_part
         = render partial: 'redaction/paragraphs/paragraph', collection: @news.paragraphs.in_second_part
       .new_paragraph
