--- a/app/views/redaction/news/show.html.haml
+++ b/app/views/redaction/news/show.html.haml
@@ -1,5 +1,8 @@
 - title @news.title
 
+- content_for :metadata do
+  = render 'metadata', news: @news
+
 - content_for :toolpanel do
   = render 'toolpanel', news: @news, boards: @boards, enable_reassign: true
 
@@ -17,8 +20,6 @@
       = render partial: 'redaction/links/link', collection: @news.links
     %p.new_link{'data-url' => new_redaction_news_link_path(news_id: @news)}
       %button.add_link Ajouter un lien
-    #second_part_toc
-      = @news.second_part_toc
     #second_part
       = render partial: 'redaction/paragraphs/paragraph', collection: @news.paragraphs.in_second_part
     .new_paragraph
