redaction: allow to display toc multiple times and have all synced

--- a/app/assets/stylesheets/parts/redaction.scss
+++ b/app/assets/stylesheets/parts/redaction.scss
@@ -279,7 +279,7 @@ body#redaction-index {
       background-image: url("/images/icones/underline.svg"), none;
       padding-bottom: 5px;
     }
-    #second_part_toc h2 {
+    .second_part_toc h2 {
       display: none;
     }
     ul {
