toolbar: with new font, toolbar font size were too small

--- a/app/assets/stylesheets/parts/layout.scss
+++ b/app/assets/stylesheets/parts/layout.scss
@@ -19,7 +19,7 @@ div#toolbar {
   background: $C_CONTAINER;
   border: 1px solid $C_INTER;
   color: $C_FONCE;
-  font-size: x-small;
+  font-size: small;
   will-change: transform;
 
   #toolbar_items {
