--- a/app/views/redaction/news/show.html.haml
+++ b/app/views/redaction/news/show.html.haml
@@ -1,5 +1,8 @@
 - title @news.title
 
+- content_for :metadata do
+  = render 'metadata', news: @news
+
 - content_for :toolpanel do
   = render 'toolpanel', news: @news, boards: @boards, enable_reassign: true
 
