redaction: add a toolbar to display summary and to show toolpanel
Notice and alerts are moved outside the redaction section to avoid
to disturb flex: we needed to add the "nowrap" flex property to keep the
3 columns alongside on large screen, even if zoom is applied.

--- a/app/assets/stylesheets/parts/notice.scss
+++ b/app/assets/stylesheets/parts/notice.scss
@@ -1,7 +1,10 @@
 /* message à caractère informatif */
-#redaction .alert,
-#redaction .notice {
-  width: 100%;
+body.chat_n_edit {
+  .alert,
+  .notice {
+    width: 50%;
+    margin: 10px auto;
+  }
 }
 .alert {
   text-align: center;
