--- a/app/views/redaction/news/_toolbar.html.haml
+++ b/app/views/redaction/news/_toolbar.html.haml
@@ -1,6 +1,12 @@
 %span.popup-event{"data-popup-id": "toolbar-toc"}
-  = image_tag("icones/chevron-up.svg")
-  Sommaire
-#toolbar-toc.second_part_toc
-  = news.second_part_toc
+  - if defined?(news)
+    = image_tag("icones/chevron-up.svg")
+    Sommaire
+- if defined?(news)
+  #toolbar-toc
+    - if (news.second_part_toc.length > 0)
+      .second_part_toc
+        #{news.second_part_toc}
+    - else
+      %p Un sommaire sera automatiquement crée quand le texte sera assez grand.
 = image_tag("icones/show_panel.svg", class: "popup-event", "data-popup-id": "toolpanel", "data-popup-shown": true, alt: "Afficher les détails", title: "Afficher les détails")
