toolpanel: add a help tab, reorganize a bit rest of the toolpanel

--- a/app/views/redaction/news/_toolpanel.html.haml
+++ b/app/views/redaction/news/_toolpanel.html.haml
@@ -1,6 +1,3 @@
-- if news.urgent?
-  %h1.urgent Dépêche urgente !
-
 .tab-header-container
   .tab{'data-tab-content-id' => 'tab-chat', 'data-show-content' => true}
     Discussions
@@ -8,12 +5,19 @@
     Détails
   .tab{'data-tab-content-id' => 'tab-history'}
     Historique
+  .tab{'data-tab-content-id' => 'tab-help'}
+    Aide
 
-%hr
+.tab-content-container
+  %hr
+  - if news.urgent?
+    %h1.urgent Dépêche urgente !
 
-%div
   #tab-chat.tab-content{'data-show-content' => true}
+    - if current_page?(moderation_news_path(news))
+      = render 'vote'
     = render 'boards/large', boards: boards, box: false
+    %hr
   #tab-details.tab-content
     %p
       Titre:
@@ -55,9 +59,18 @@
     %hr
     %p Participants
     = render 'attendees', attendees: news.attendees, enable_reassign: enable_reassign
+    %hr
   #tab-history.tab-content
     = render 'editions', news: news
+    %hr
+  #tab-help.tab-content
+    - if current_page?(moderation_news_path(news))
+      %p Pour ajouter une note des modérateurs, commencez simplement une ligne par <code>NdM :</code>.
+      %p
+        L'icone
+        = image_tag "/images/icones/edit-cut.png", alt: "Suggestion de découpe"
+        sert à suggérer où découper entre les première et seconde parties de la dépêche.
 
-%hr
+    = render 'shared/wiki_help'
 
 = image_tag("icones/show_panel.svg", class: "popup-event", "data-popup-id": "toolpanel", alt: "Afficher les détails", title: "Afficher les détails")
