--- a/app/views/redaction/news/_toolpanel.html.haml
+++ b/app/views/redaction/news/_toolpanel.html.haml
@@ -70,7 +70,7 @@
         L'icone
         = image_tag "/images/icones/edit-cut.png", alt: "Suggestion de découpe"
         sert à suggérer où découper entre les première et seconde parties de la dépêche.
-
-    = render 'shared/wiki_help'
+    = render 'wiki_help'
+    %hr
 
 = image_tag("icones/show_panel.svg", class: "popup-event", "data-popup-id": "toolpanel", alt: "Afficher les détails", title: "Afficher les détails")
