--- a/app/assets/stylesheets/responsive/m.scss
+++ b/app/assets/stylesheets/responsive/m.scss
@@ -50,6 +50,8 @@
     #toolbar {
       width: 100%;
       transform: unset;
+      border-radius: 0;
+      bottom: 0;
       .popup-event[data-popup-id="toolpanel"] {
         &[data-popup-shown] {
           transform: unset;
@@ -57,6 +59,9 @@
         &:not([data-popup-shown]) {
           transform: scale(-1, 1);
         }
+      }
+      #toolbar-toc {
+        border-radius: 0;
       }
     }
   }
