redaction + moderation: add figure display and management to news index and show

--- a/app/assets/stylesheets/contrib/RonRonnement-Mauve.scss
+++ b/app/assets/stylesheets/contrib/RonRonnement-Mauve.scss
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 
 $C_CLAIR: #e9e6e4;
+$C_CLAIR_HOVER: #e0e0e0;
 $C_BANDEAU: #5d004a !default;
 $C_FONCE: #93877b;
 $C_INTER: #93877b;
