--- a/app/assets/stylesheets/parts/redaction.scss
+++ b/app/assets/stylesheets/parts/redaction.scss
@@ -12,16 +12,6 @@ html.chat_n_edit {
 
 #edition {
   article {
-    #first_part {
-      position: relative;
-      top: -1em;
-      &::before {
-        content: inline("feather-icons/dist/icons/scissors.svg");
-        position: relative;
-        top: 20em;
-        left: -6em;
-      }
-    }
     img {
       color: rgb(100, 100, 100);
       text-align: center;
@@ -45,6 +35,69 @@ html.chat_n_edit {
     border-left: 16px;
     border-image: inline("feather-icons/dist/icons/eye-off") 0 0 0 32;
     border-style: solid;
+  }
+  #figure {
+    text-align: center;
+    background-color: $C_CLAIR_HOVER;
+    margin: 2em auto;
+    .add-image {
+      font-size: 1.05em;
+      line-height: 1.8;
+      padding: 20px;
+      .empty-image {
+        width: 108px;
+        height: 108px;
+        background: no-repeat center;
+        background-image: url("/images/icones/image.png");
+        background-image: url("/images/icones/image.svg");
+        margin: 0.5em auto;
+      }
+      .edit {
+        margin-top: 1em;
+      }
+    }
+    .edit {
+      border-radius: 0;
+      width: auto;
+      padding-left: 28px;
+      padding-right: 5px;
+      text-indent: 0;
+      &.add_news_figure {
+        background-image: inline("feather-icons/dist/icons/plus.svg");
+      }
+      &:hover {
+        background-color: $C_FONCE;
+      }
+    }
+    figure {
+      margin: 0 auto;
+      padding: 0;
+      display: table;
+      img {
+        width: 100%;
+        max-height: none;
+        &:before,
+        &:after {
+          position: static;
+          height: auto;
+          display: block;
+          margin: auto;
+          padding: 1rem;
+          background-color: rgb(230, 230, 230);
+          border: 2px dotted rgb(200, 200, 200);
+          border-radius: 5px;
+        }
+        &:after {
+          content: "Votre navigateur n'arrive pas à afficher l'image. Veuillez réessayer l'envoi.";
+          color: red;
+        }
+      }
+      figcaption {
+        padding-right: 0.5rem;
+        text-align: right;
+        font-size: 0.8em;
+      }
+    }
   }
 }
 
@@ -300,6 +353,9 @@ body.chat_n_edit {
 
 body#redaction-index {
   #container {
+    display: -ms-flexbox;
+    -ms-flex-direction: row-reverse;
+    -ms-flex-wrap: wrap;
     display: flex;
     flex-direction: row-reverse;
     flex-wrap: wrap;
@@ -309,18 +365,19 @@ body#redaction-index {
     }
     & > footer,
     .notice {
+      -ms-flex: 0 0 100%;
       flex: 0 0 100%;
     }
   }
   aside.more {
-    max-width: 300px;
     margin: 0 0 10px 10px;
-    flex: 1 0;
+    -ms-flex: 1 0 300px;
+    flex: 1 0 300px;
   }
   #main_board {
-    width: 420px;
     margin: 0 0 10px 10px;
-    flex: 2 0;
+    -ms-flex: 2 0 420px;
+    flex: 2 0 420px;
   }
   #board_message {
     width: 100%;
@@ -330,23 +387,36 @@ body#redaction-index {
   }
   #news,
   #candidate_news {
+    display: -ms-flexbox;
+    -ms-flex-wrap: wrap;
     display: flex;
     flex-wrap: wrap;
   }
   .news {
+    display: -ms-flexbox;
+    -ms-flex: 1 0 225px;
+    -ms-flex-pack: justify;
+    -ms-flex-align: center;
+    display: flex;
     flex: 1 0 225px;
+    justify-content: space-between;
     margin: 0 25px 10px 0;
     border: 1px solid #999;
     padding: 6px;
     background: #fff;
-    display: flex;
-    flex-direction: column;
     position: relative;
     font-size: 0.8em;
     color: #555;
+    & > div:not(.news-figure) {
+      -ms-flex: 1;
+      display: flex;
+      flex-direction: column;
+      h3 {
+        flex: 1;
+      }
+    }
   }
   h3 {
-    flex: 1;
     font-size: 1.1rem;
     color: #000;
     margin: 12px 16px 12px 0;
@@ -374,6 +444,18 @@ body#redaction-index {
   #candidate_news .news {
     padding: 20px 5px;
     font-weight: bold;
+  }
+  .news-figure {
+    width: 5vw;
+    min-width: 5vw;
+    -ms-flex-align: center;
+    align-self: center;
+    figure {
+      margin: auto;
+      img {
+        width: 100%;
+      }
+    }
   }
 }
 
