--- a/app/assets/stylesheets/parts/redaction.scss
+++ b/app/assets/stylesheets/parts/redaction.scss
@@ -36,7 +36,7 @@ html.chat_n_edit {
     border-image: inline("feather-icons/dist/icons/eye-off") 0 0 0 32;
     border-style: solid;
   }
-  #figure {
+  .figure {
     text-align: center;
     background-color: $C_CLAIR_HOVER;
     margin: 2em auto;
@@ -56,7 +56,7 @@ html.chat_n_edit {
         margin-top: 1em;
       }
     }
-    .edit {
+    button.edit {
       border-radius: 0;
       width: auto;
       padding-left: 28px;
@@ -344,6 +344,55 @@ body.chat_n_edit {
             font-weight: normal;
             text-transform: uppercase;
             text-align: left;
+          }
+        }
+      }
+    }
+  }
+  &:not(.moderation_page) {
+    #redaction {
+      #edition {
+        color: $C_SOMBRE;
+        margin: 0;
+        padding: 0;
+        #topbar {
+          margin-left: 3rem;
+          margin-right: 3rem;
+        }
+        article.news {
+          background: none;
+          border: none;
+          margin: 0;
+          padding: 0;
+          #news_header {
+            font-size: 1.15em;
+          }
+          #first_part {
+            font-size: 1.05em;
+            padding-right: 40%;
+          }
+          .new_paragraph {
+            padding-top: 1rem;
+          }
+          h1 {
+            font-weight: normal;
+            padding: 0;
+            border: none;
+            margin-right: 0;
+            .topic {
+              display: none;
+            }
+          }
+          p {
+            padding-left: 0;
+            padding-right: 0;
+          }
+          .figures {
+            display: none;
+          }
+          > header,
+          > .content > div:not([class=figure]) {
+            padding: 0 3rem;
           }
         }
       }
