--- a/app/views/moderation/news/show.html.haml
+++ b/app/views/moderation/news/show.html.haml
@@ -20,7 +20,7 @@
     - c.body  = capture do
       #first_part
         = render partial: 'redaction/paragraphs/paragraph', collection: @news.paragraphs.in_first_part
-      #figure
+      .figure
         = render partial: 'redaction/figures/figure', locals: { news: @news }
       .second_part_toc
         = @news.second_part_toc
