--- a/app/views/redaction/figures/_figure.html.haml
+++ b/app/views/redaction/figures/_figure.html.haml
@@ -4,7 +4,7 @@
   - if news.figure_image?
     %figure
       %img{src: news.figure_image.url, alt: "#{news.figure_alternative}", srcset: news.figure_image.srcset}
-      %figcaption #{news.figure_caption}
+      %figcaption #{news.figure_alternative}, #{news.figure_caption}
     = button_to "Effacer l'image", delete_redaction_figure_path(@news), class: "delete_button", data: { confirm: "Effacer cette image utilisée par erreur ?" }
     %button.edit Modifier l'image
   - else
