--- a/app/assets/stylesheets/parts/home.scss
+++ b/app/assets/stylesheets/parts/home.scss
@@ -4,6 +4,22 @@
   box-shadow: 0 4px 6px 0 #aaa;
   border: solid $BORDER_PHARE $C_BANDEAU;
   border-radius: 0;
+  .wrapper {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+    .news-figure figure {
+      background-color: transparent;
+      img {
+        width: 100%;
+        max-height: none;
+      }
+      figcaption {
+        display: none;
+      }
+    }
+  }
 }
 
 /* information générale, "publicité" (genre fosdem p. ex.) */
