--- a/app/assets/stylesheets/parts/content.scss
+++ b/app/assets/stylesheets/parts/content.scss
@@ -31,34 +31,24 @@ body#wiki_pages-changes #contents {
 body#home-index,
 body#news-index {
   article {
-    .wrapper {
-      display: -ms-flexbox;
-      display: flex;
-      .news-figure figure {
-        width: 168px;
-        background-color: transparent;
-        margin-left: 2em;
-        img {
-          width: 100%;
-          max-height: none;
-        }
-        figcaption {
-          display: none;
-        }
-      }
-      div {
-        -ms-flex: 0 1 auto;
-        flex: 1 1 auto;
-      }
-    }
-    &.ppp .wrapper {
-      -ms-flex-direction: column-reverse;
-      flex-direction: column-reverse;
-      .news-figure figure {
+    .news-figure figure {
+      float: right;
+      width: 168px;
+      margin: 1em;
+      margin-right: 0;
+      background-color: transparent;
+      img {
         width: 100%;
-        margin-left: auto;
         max-height: none;
       }
+      figcaption {
+        display: none;
+      }
+    }
+    &.ppp .news-figure figure {
+      width: 100%;
+      margin-left: auto;
+      max-height: none;
     }
   }
 }
@@ -204,6 +194,7 @@ article {
 }
 
 footer.actions {
+  clear: right;
   font-size: 1em;
   .action {
     color: $C_INTER;
