home: split home from default application layout and implements first new nav bandeau

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,9 @@ $C_CONTAINER: #f9f9f9;
 $C_MENU: #4c575f;
 $C_BORDER_FONCE: #999;
 
+/* Color for new home */
+$C_HOME_BANDEAU: #ffc73f !default;
+
 /*$C_BD1: #F9DEE8;
 $C_BD2: #F1ABC5;
 $C_BD3: #E978A3;
