--- a/app/assets/stylesheets/responsive/m.scss
+++ b/app/assets/stylesheets/responsive/m.scss
@@ -314,4 +314,23 @@
   .about-signup + img {
     grid-row: 9;
   }
+
+  html#home {
+    body {
+      nav#home-site {
+        padding-top: 5px;
+        justify-content: center;
+
+        >* {
+          margin: 5px 0;
+        }
+
+        #links {
+          flex-wrap: wrap;
+          width: 100%;
+          max-width: unset;
+        }
+      }
+    }
+  }
 }
