--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,29 +1,1 @@
-- content_for :column do
-  = render 'polls/box'
-  = render 'sections/box'
-
-- feed "Flux Atom des dépêches", "/news.atom"
-- title "Accueil"
-- cache_unless account_signed_in?, "home/#{@order}/#{@nodes.current_page}", expires_in: 1.minute do
-  %h1 "Accueil"
-  - if @ppp
-    %section#phare
-      = render @ppp
-
-  - if @banner
-    %aside.banner
-      = @banner
-  = paginated_section @nodes, link_to("Proposer une dépêche", "/news/nouveau") do
-    %main#contents(role="main")
-      = render @nodes.map(&:content)
-  .incitation
-    %h2 Faites vivre LinuxFr.org
-    %p
-      Tous les articles sont le fruit du travail de la communauté. Grâce au
-      système de rédaction coopérative du site, on peut s’aider les uns les
-      autres. Pas besoin d’expertise pour participer.
-    %ul.people-list
-      %li
-        %a(href="/redaction") Participer
-      %li
-        %a(href="/a-propos") En savoir plus
+Hello world !
