--- a/app/assets/stylesheets/parts/home.scss
+++ b/app/assets/stylesheets/parts/home.scss
@@ -1,39 +1,137 @@
-/* article titre */
-#phare article {
-  margin: 1rem -1px 3rem;
-  box-shadow: 0 4px 6px 0 #aaa;
-  border: solid $BORDER_PHARE $C_BANDEAU;
-  border-radius: 0;
-}
+html#home {
+  body {
+    nav#home-site {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: stretch;
+      justify-content: space-between;
 
-/* information générale, "publicité" (genre fosdem p. ex.) */
-.banner {
-  display: block;
-  position: relative;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: $C_BD2;
-  box-shadow: 0 0 65px #fff inset, 0 0 20px $C_BD2 inset;
-  border-top: solid 2px $C_BANDEAU;
-  border-bottom: solid 2px $C_BANDEAU;
-  padding: 5px;
-}
+      background: $C_HOME_BANDEAU;
+      color: white;
 
-/* Le court texte à la fin de la page d'accueil pour inciter les gens à participer au site */
-.incitation {
-  text-align: center;
-  margin: 3rem 0 2rem;
-  border-top: solid 2px $C_BANDEAU;
-  & > * {
-    max-width: 48rem;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  h2 {
-    color: #333;
-  }
-  .people-list li {
-    padding: 1rem;
+      > * {
+        margin: 0 10px;
+      }
+
+      a:not(:hover) {
+        border-bottom-color: transparent;
+      }
+
+      .active, a {
+        border-top: solid 5px transparent;
+        border-bottom: solid 5px white;
+      }
+
+      #logo {
+        display: flex;
+
+        img {
+          max-height: 3rem;
+          margin-right: 10px;
+          margin-top: 2px;
+        }
+
+        #site-name {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+
+          font-family: "Merriweather";
+          font-weight: bolder;
+
+          #head-site-name {
+            font-size: 1.2rem;
+          }
+
+          #tld-site-name {
+            font-size: 0.8rem;
+          }
+        }
+      }
+
+      #links {
+        display: flex;
+        flex: 1 1 auto;
+        align-content: stretch;
+        justify-content: space-evenly;
+        max-width: 50%;
+
+        font-size: 1.1rem;
+
+        #site-links-search-glass img {
+          width: 1.4rem;
+          max-width: unset;
+          max-height: unset;
+        }
+      }
+
+      #sign-about {
+        font-size: 0.8rem;
+        color: black;
+        display: flex;
+        align-content: stretch;
+
+        #site-about {
+          align-self: center;
+
+          padding: 0.6rem;
+          margin-left: 10px;
+
+          border: solid 1px black;
+          border-radius: 1rem;
+
+          background-color: white;
+        }
+      }
+
+      a {
+        display: flex;
+        align-items: center;
+      }
+
+      a:hover {
+        text-decoration: none;
+      }
+    }
+
+    /* article titre */
+    #phare article {
+      margin: 1rem -1px 3rem;
+      box-shadow: 0 4px 6px 0 #aaa;
+      border: solid $BORDER_PHARE $C_BANDEAU;
+      border-radius: 0;
+    }
+
+    /* information générale, "publicité" (genre fosdem p. ex.) */
+    .banner {
+      display: block;
+      position: relative;
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+      background-color: $C_BD2;
+      box-shadow: 0 0 65px #fff inset, 0 0 20px $C_BD2 inset;
+      border-top: solid 2px $C_BANDEAU;
+      border-bottom: solid 2px $C_BANDEAU;
+      padding: 5px;
+    }
+
+    /* Le court texte à la fin de la page d'accueil pour inciter les gens à participer au site */
+    .incitation {
+      text-align: center;
+      margin: 3rem 0 2rem;
+      border-top: solid 2px $C_BANDEAU;
+      & > * {
+        max-width: 48rem;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      h2 {
+        color: #333;
+      }
+      .people-list li {
+        padding: 1rem;
+      }
+    }
   }
 }
