--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,7 +15,7 @@ $C_MENU: #4c575f;
 $C_BORDER_FONCE: #999;
 
 /* Color for new home */
-$C_HOME_BANDEAU: #ffc73f !default;
+$C_HOME_HEADER: #ffc73f !default;
 
 /*$C_BD1: #F9DEE8;
 $C_BD2: #F1ABC5;
