home: add the _footer and fix minimal space between links in the header nav

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,7 @@ $C_BORDER_FONCE: #999;
 
 /* Color for new home */
 $C_HOME_HEADER: #ffc73f !default;
+$C_HOME_FOOTER: #b88305;
 
 /*$C_BD1: #F9DEE8;
 $C_BD2: #F1ABC5;
