--- a/app/views/home/_header.html.haml
+++ b/app/views/home/_header.html.haml
@@ -13,7 +13,7 @@
 			= link_to "Forums", '/forums', title: "Questions‑réponses, petites annonces"
 			= link_to "Wiki", '/wiki', title: "Pages wiki"
 			= link_to "Rédaction", '/redaction', title: "Participez à la rédaction des dépêches"
-			= link_to image_tag('icones/glass_white.svg'), 'https://google.com?q=site%3Alinuxfr.org', title: "Rechercher", :id => "site-links-search-glass"
+			= link_to image_tag('icones/glass_white.svg'), '/recherche?q=', title: "Rechercher", :id => "site-links-search-glass"
 
 		#sign-about
 			= link_to "Se connecter", '/compte/connexion'
