--- a/app/views/home/_header.html.haml
+++ b/app/views/home/_header.html.haml
@@ -17,4 +17,4 @@
 
 		#sign-about
 			= link_to "Se connecter", '/compte/connexion'
-			= link_to "En savoir plus", '/informations', :id => 'site-about'
+			= link_to "En savoir plus", '/a-propos', :id => 'site-about'
